<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sischok</string>
    <string name="title_incidente_detail">incidente Detail</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_crear">Crear Incidente</string>
    <string name="action_ver">Consultar Incidentes</string>
    <string name="action_notificar">Notificar Usuarios</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_crear_incidente_barrios">Seleccionar Barrio</string>
    <string name="lblSeleccionarBarrio">Selecciona la Localidad del indicente:</string>
    <string name="title_activity_crear_incidente_descripcion">Crear Incidente</string>
    <string name="title_activity_crear_incidente_gps">Crear Incidente GPS</string>
    <string name="title_activity_crear_incidente_latlng">Crear Incidente GPS</string>
    <string name="title_activity_vista_ebrio">Riesgo Potencial</string>
    <string name="title_activity_pantalla_bloqueada">Riesgo Potencial - Pantalla Bloqueada</string>
    <string name="lblCrearIncidentesTitulo">Titulo para el incidente:</string>
    <string name="lblCrearIncidenteDescripcion">Ingresa datos adicionales:</string>
    <string name="lblCrearIncidenteIngresodescripcion">Ingresa una descripción para el incidente:</string>
    <string name="lblCrearIncidenteGravedad">Selecciona el nivel de gravedad (1 al 5):</string>
    <string name="btnCrearIncidente"> Crear Incidente</string>
    <string name="btnCrearIncidenteLatLng">Crear Incidente Localizado</string>
    <string name="lblLocalidad1">Antonio Nariño</string>
    <string name="lblLocalidad2">Barrios Unidos</string>
    <string name="lblLocalidad3">Bosa</string>
    <string name="lblLocalidad4">Chapinero</string>
    <string name="lblLocalidad5">Ciudad Bolivar</string>
    <string name="lblLocalidad6">Engativa</string>
    <string name="lblLocalidad7">Fontibón</string>
    <string name="lblLocalidad8">Kennedy</string>
    <string name="lblLocalidad9">La Candelaria</string>
    <string name="lblLocalidad10">Martires</string>
    <string name="lblLocalidad11">Puente Aranda</string>
    <string name="lblLocalidad12">Rafael Uribe</string>
    <string name="lblLocalidad13">San Cristobal</string>
    <string name="lblLocalidad14">Santa fe</string>
    <string name="lblLocalidad15">Suba</string>
    <string name="lblLocalidad16">Teusaquillo</string>
    <string name="lblLocalidad17">Tunjuelito</string>
    <string name="lblLocalidad18">Usaquen</string>
    <string name="lblLocalidad19">Usme</string>
    <string name="codLocalidad1">0</string>
    <string name="codLocalidad2">1</string>
    <string name="codLocalidad3">2</string>
    <string name="codLocalidad4">3</string>
    <string name="codLocalidad5">4</string>
    <string name="codLocalidad6">5</string>
    <string name="codLocalidad7">6</string>
    <string name="codLocalidad8">7</string>
    <string name="codLocalidad9">8</string>
    <string name="codLocalidad10">9</string>
    <string name="codLocalidad11">10</string>
    <string name="codLocalidad12">11</string>
    <string name="codLocalidad13">12</string>
    <string name="codLocalidad14">13</string>
    <string name="codLocalidad15">14</string>
    <string name="codLocalidad16">15</string>
    <string name="codLocalidad17">16</string>
    <string name="codLocalidad18">17</string>
    <string name="codLocalidad19">18</string>
    <string name="lblNuevosIncidentes">Incidentes Recientes:</string>
    <string name="lblbntCrearIncidente">Crear Incidente</string>
    <string name="lblbntCrearIncidenteGPS">Crear Incidente GPS</string>
    <string name="lblbtnConsultaIncidente">Consulta incidente Por Zonas</string>
    <string name="lblbtnIncidentesPorAmigos">Incidentes reportados por amigos</string>
    <string name="lblbtnAjustes">Ajustes</string>
    <string name="lblbtnSalirEstadoEbrio">No estoy ebrio</string>
    <string name="lblbtnLetraA">A</string>
    <string name="lblbtnLetraG">G</string>
    <string name="lblbtnLetraV">V</string>
    <string name="lblbtnLetraI">I</string>
    <string name="lblbtnLetraX">X</string>
    <string name="lblbtnLetraY">Y</string>
    <string name="lblbtnLetraT">T</string>
    <string name="lblbtnLetraE">E</string>
    <string name="lblbtnLetraM">M</string>
    <string name="title_activity_bienvenida">Bienvenido a Sischok</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lblTextoBienvenida">Bienvenidos a Sischok Sistema de prevención de accidentes. Antes de comenzar a usar el sistema les solicitamos un nombre que estará destinado a firmar los incidentes creados y la edad sea la apropiada para el uso del sistema</string>
    <string name="lblBienvenidaNombre">¿Cual es su nombre?"</string>
    <string name="lblBienvenidaEdad">¿Que Edad tiene?</string>
    <string name="lblbtnIniciarApp">Entrar a Sischok</string>
    <string name="title_activity_detalle_incidente">Incidente</string>
    <string name="lblDetalleIncDescripcion">Descripcion de Incidente</string>
    <string name="lblDetalleIncZona">Zona en la que fue reportado el Incidente</string>
    <string name="lblDetalleIncGravedad">Nivel de Gravedad:</string>
    <string name="lblDetalleIncUsuario">"Creador de Incidente: "</string>
    <string name="lblDetalleIncFechaCreacion">Fecha de creacion:</string>
    <string name="title_activity_consultar_incidentes">Consultar Incidentes</string>
    <string name="lblConsultarIncSeleccionarLocalidad">Seleccionar la Localidad:</string>
    <string name="lblDetalleIncConsultar">Consultar Incidentes</string>
    <string name="lblSinTitulo">Sin Titulo</string>
    <string name="lblUsuarioDesconocido">Usuario Desconocido</string>
    <string name="lblSinTelefono">Sin Celular Registrado</string>
    <string name="title_activity_compartir_incidente">Compartir Incidente</string>
    <string name="lblCompartirSMS">Compartir mediante SMS</string>
    <string name="lblCompartirConDetalleInc">Compartir Incidente</string>
    <string name="title_activity_ver_resultado_incidentes">Resultado Incidentes</string>
    <string name="title_activity_borracho">Entregue las llaves</string>
    <string name="lblDejarDeConducir">El estado ebrio ha sido activado en este dispositivo. Usted no debería manejar. Entregue las llaves a alguien que pueda conducir.</string>
    <string name="lblPantallaBloqueada">Por favor oprima las letras en orden alfabético</string>
    <string name="deStop">imagen de stop</string>
</resources>
