<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConsultarIncidentes" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblUsuarioComConListview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lblConsultarIncSeleccionarLocalidad" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09" >

			<RadioGroup
			    android:id="@+id/radioLocalidad"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radLocalidad1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad1"
                    android:text="@string/lblLocalidad1" />

                <RadioButton
                    android:id="@+id/radLocalidad2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad2"
                    android:text="@string/lblLocalidad2" />

                <RadioButton
                    android:id="@+id/radLocalidad3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad3"
                    android:text="@string/lblLocalidad3" />

                <RadioButton
                    android:id="@+id/radLocalidad4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad4"
                    android:text="@string/lblLocalidad4" />

                <RadioButton
                    android:id="@+id/radLocalidad5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad5"
                    android:text="@string/lblLocalidad5" />

                <RadioButton
                    android:id="@+id/radLocalidad6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad6"
                    android:text="@string/lblLocalidad6" />

                <RadioButton
                    android:id="@+id/radLocalidad7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad7"
                    android:text="@string/lblLocalidad7" />

                <RadioButton
                    android:id="@+id/radLocalidad8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad8"
                    android:text="@string/lblLocalidad8" />

                <RadioButton
                    android:id="@+id/radLocalidad9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad9"
                    android:text="@string/lblLocalidad9" />

                <RadioButton
                    android:id="@+id/radLocalidad10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad10"
                    android:text="@string/lblLocalidad10" />

                <RadioButton
                    android:id="@+id/radLocalidad11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad11"
                    android:text="@string/lblLocalidad11" />

                <RadioButton
                    android:id="@+id/radLocalidad12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad12"
                    android:text="@string/lblLocalidad12" />

                <RadioButton
                    android:id="@+id/radLocalidad13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad13"
                    android:text="@string/lblLocalidad13" />

                <RadioButton
                    android:id="@+id/radLocalidad14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad14"
                    android:text="@string/lblLocalidad14" />

                <RadioButton
                    android:id="@+id/radLocalidad15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad15"
                    android:text="@string/lblLocalidad15" />

                <RadioButton
                    android:id="@+id/radLocalidad16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad16"
                    android:text="@string/lblLocalidad16" />

                <RadioButton
                    android:id="@+id/radLocalidad17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad17"
                    android:text="@string/lblLocalidad17" />

                <RadioButton
                    android:id="@+id/radLocalidad18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad18"
                    android:text="@string/lblLocalidad18" />

                <RadioButton
                    android:id="@+id/radLocalidad19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/codLocalidad19"
                    android:text="@string/lblLocalidad19" />
                
                </RadioGroup>
        </ScrollView>

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDetalleIncConsultar" />
    </LinearLayout>

</RelativeLayout>
