<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosado_botonCrearIncidente"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PantallaBloqueada" >

    <AbsoluteLayout
        android:id="@+id/absoluteLayout1"
        android:layout_width="fill_parent"
        android:layout_height="332dp"
        android:layout_below="@+id/textView1"
        android:layout_y="88dp" >

        <Button
            android:id="@+id/bA"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="92dp"
            android:layout_x="0dp"
            android:layout_y="0dp"
            android:text="@string/lblbtnLetraA" />

        <Button
            android:id="@+id/bG"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="172dp"
            android:layout_y="58dp"
            android:text="@string/lblbtnLetraG" />

        <Button
            android:id="@+id/bV"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_x="24dp"
            android:layout_y="40dp"
            android:text="@string/lblbtnLetraV" />

        <Button
            android:id="@+id/bI"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="166dp"
            android:layout_y="152dp"
            android:text="@string/lblbtnLetraI" />

        <Button
            android:id="@+id/bX"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="90dp"
            android:layout_y="102dp"
            android:text="@string/lblbtnLetraX" />

        <Button
            android:id="@+id/bY"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="74dp"
            android:layout_y="261dp"
            android:text="@string/lblbtnLetraY" />

        <Button
            android:id="@+id/bT"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="164dp"
            android:layout_y="244dp"
            android:text="@string/lblbtnLetraT" />

    </AbsoluteLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/absoluteLayout1"
        android:text="@string/lblPantallaBloqueada"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</AbsoluteLayout>